--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,7 @@
 dist: bionic
-language: ruby
-rvm: 2.7
-cache:
-  bundler: true
-before_script: bundle exec rake compile
-script: bundle exec rake test
+language: python
+before_script: pip install isotree
+script: python test/support/predict.py
 notifications:
   email:
     on_success: never
